css bug reset and clear btns overflow hidden.

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -59,7 +59,7 @@ nav {
 	}
 
 	.nav-block {
-		overflow-y: auto;
+		// overflow-y: auto;
 		overflow-x: hidden;
 		height: calc(100% - 115px);
 		width: 100%;
