--- a/sass/main.css
+++ b/sass/main.css
@@ -1036,7 +1036,6 @@ nav header h1 sup {
   top: 20px;
 }
 nav .nav-block {
-  overflow-y: auto;
   overflow-x: hidden;
   height: calc(100% - 115px);
   width: 100%;
